--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/public-sans": "^4.5.11",
+    "@mui/icons-material": "^5.10.16",
     "@mui/joy": "^5.0.0-alpha.56",
+    "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
