feat: setup reset password on the server

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,11 @@ MONGO_URL=
 # JWT Secret
 JWT_SECRET=
 JWT_LIFETIME=1d
+
+# SMTP (For resetting password)
+SMTP_HOST=
+SMTP_PORT=
+SMTP_EMAIL=
+SMTP_PASSWORD=
+FROM_EMAIL=
+FROM_NAME=
