--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   }
